# code_tools

./: .coveragerc  .gitignore  .pylintrc  .pytest.ini  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  check.sh  clean-build.sh  pyproject.toml  requirements.txt  unittest.sh
.github/: workflows
code_tools/base/: doxygen_gen_tools.py  eula.py  json_string_class_description.py  param_return_tools.py  text_format.py
example/: argparse_autogen.py  argparse_json_data.py  argparse_json_string_data.py
setup_files/: Doxyfile.in  README.md.in  pyproject.toml.in
tests/: __init__.py  dir_init.py  dir_init.py.in  mock_eula.py  support_func.py  test_class_file_gen.py  test_class_file_gen_file.py  test_cmake_gen.py  test_comment_block.py  test_comment_generator.py  test_commit_check.py  test_copyright_generator.py  test_copyright_order.py  test_copyright_parse.py  test_copyright_parse_base.py  test_copyright_years_list.py  test_cpp_file_generation.py  test_cpp_linux_lang_select.py  test_cpp_master_lang_select.py  test_cpp_static_lang_select.py  test_cpp_string_class_tools.py  test_cpp_windows_lang_select.py  test_doxygen_generator.py  test_eula.py  test_insert_new_copyright.py  test_json_language_list.py  test_json_project.py  test_json_string_class_description.py  test_json_string_class_input.py  test_json_string_class_macro.py  test_linux_lang_select.py  test_param_return_tools.py  test_project_gen.py  test_python_file_generation.py  test_string_class_tools.py  test_subtext_marker.py  test_text_format.py  test_translation_text_parser.py  test_ts_file_generation.py
(+524 files in other folders)
